# nettolohn.de-wrapper

./: README.md  setup.cfg
nettolohnde/: nettolohnde.py
nettolohnde/enum/: billing_period.py  child_allowance.py  pension_insurance.py  unemployment_insurance.py
nettolohnde/model/: salary_calculation_info.py
src/nettolohnde_package/: nettolohnde.py
src/nettolohnde_package/enum/: age.py  health_insurance.py  salaries_per_year.py  state.py  tax_class.py  weekly_working_hours.py
src/nettolohnde_package/utils/: salary_utils.py
