[metadata]
name = nettolohnde
version = 0.0.1
author = Marc Szymkowiak
author_email = marc.szymkowiak91@googlemail.com
description = A python wrapper for the nettolohn.de net calculator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Ezak91/nettolohn.de-wrapper
project_urls =
    Bug Tracker = https://github.com/Ezak91/nettolohn.de-wrapper/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src